Desktop view complete

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       .attribution {
         font-size: 11px;
         text-align: center;
-        margin-top: 20px;
+        margin-top: 90px;
       }
       .attribution a {
         color: hsl(228, 45%, 44%);
@@ -39,30 +39,37 @@
           <p>We only provide great products combined with excellent customer service.
           See what our satisfied customers are saying about our services.</p>
         </div>
-        
-          <div class="ratingCard">
-            <img src="./images/icon-star.svg" alt="icon-star">
-            <img src="./images/icon-star.svg" alt="icon-star">
-            <img src="./images/icon-star.svg" alt="icon-star">
-            <img src="./images/icon-star.svg" alt="icon-star">
-            <img src="./images/icon-star.svg" alt="icon-star">
-            <p>Rated 5 Stars in Reviews</p>
-          </div>
-          <div class="ratingCard">
-            <img src="./images/icon-star.svg" alt="icon-star">
-            <img src="./images/icon-star.svg" alt="icon-star">
-            <img src="./images/icon-star.svg" alt="icon-star">
-            <img src="./images/icon-star.svg" alt="icon-star">
-            <img src="./images/icon-star.svg" alt="icon-star">
-            <p>Rated 5 Stars in Report Guru</p>
-          </div>
-          <div class="ratingCard">
-            <img src="./images/icon-star.svg" alt="icon-star">
-            <img src="./images/icon-star.svg" alt="icon-star">
-            <img src="./images/icon-star.svg" alt="icon-star">
-            <img src="./images/icon-star.svg" alt="icon-star">
-            <img src="./images/icon-star.svg" alt="icon-star">
-            <p>Rated 5 Stars in BestTech</p>
+          <div class="productRating">
+            <div class="ratingCard">
+              <div class="rating">
+                <img src="./images/icon-star.svg" alt="icon-star">
+                <img src="./images/icon-star.svg" alt="icon-star">
+                <img src="./images/icon-star.svg" alt="icon-star">
+                <img src="./images/icon-star.svg" alt="icon-star">
+                <img src="./images/icon-star.svg" alt="icon-star">
+              </div>
+              <p>Rated 5 Stars in Reviews</p>
+            </div>
+            <div class="ratingCard">
+              <div class="rating">
+                <img src="./images/icon-star.svg" alt="icon-star">
+                <img src="./images/icon-star.svg" alt="icon-star">
+                <img src="./images/icon-star.svg" alt="icon-star">
+                <img src="./images/icon-star.svg" alt="icon-star">
+                <img src="./images/icon-star.svg" alt="icon-star">
+              </div>
+              <p>Rated 5 Stars in Report Guru</p>
+            </div>
+            <div class="ratingCard">
+              <div class="rating">
+                <img src="./images/icon-star.svg" alt="icon-star">
+                <img src="./images/icon-star.svg" alt="icon-star">
+                <img src="./images/icon-star.svg" alt="icon-star">
+                <img src="./images/icon-star.svg" alt="icon-star">
+                <img src="./images/icon-star.svg" alt="icon-star">
+              </div>
+              <p>Rated 5 Stars in BestTech</p>
+            </div>
           </div>
 
 
@@ -72,8 +79,10 @@
         <div class="reviewCard">
           <div class="userProfile">
             <img src="./images/image-colton.jpg" alt="colton-smith">
-            <h2>Colton Smith</h2>
-            <span>Verified Buyer</span>
+            <div class="profileName">
+              <h2>Colton Smith</h2>
+              <span>Verified Buyer</span>
+            </div>
           </div>
           <p class="userReview">"We needed the same printed design as the one we had ordered a week prior.
           Not only did they find the original order, but we also received it in time.
@@ -83,8 +92,10 @@
         <div class="reviewCard">
           <div class="userProfile">
             <img src="./images/image-irene.jpg" alt="irene-roberts">
-            <h2>Irene Roberts</h2>
-            <span>Verified Buyer</span>
+            <div class="profileName">
+              <h2>Irene Roberts</h2>
+              <span>Verified Buyer</span>
+            </div>
           </div>
           <p class="userReview">"Customer service is always excellent and very quick turn around. Completely
           delighted with the simplicity of the purchase and the speed of delivery."</p>
@@ -93,8 +104,10 @@
         <div class="reviewCard">
           <div class="userProfile">
             <img src="./images/image-anne.jpg" alt="anne-wallace">
-            <h2>Anne Wallace</h2>
-            <span>Verified Buyer</span>
+            <div class="profileName">
+              <h2>Anne Wallace</h2>
+              <span>Verified Buyer</span>
+            </div>
           </div> 
           <p class="userReview">"Put an order with this company and can only praise them for the very high
           standard. Will definitely use them again and recommend them to everyone!"</p>
